--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "style-loader": "^2.0.0",
     "terser": "^5.17.0",
     "toml": "^3.0.0",
-    "tooling": "webpack/tooling#v1.22.1",
+    "tooling": "webpack/tooling#feat-undefined-for-enum",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "url-loader": "^4.1.0",
