chore: update lock files and extra test

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "acorn-import-assertions": "^1.9.0",
     "browserslist": "^4.14.5",
     "chrome-trace-event": "^1.0.2",
-    "enhanced-resolve": "^5.14.1",
+    "enhanced-resolve": "^5.15.0",
     "es-module-lexer": "^1.2.1",
     "eslint-scope": "5.1.1",
     "events": "^3.2.0",
@@ -97,7 +97,7 @@
     "style-loader": "^2.0.0",
     "terser": "^5.17.0",
     "toml": "^3.0.0",
-    "tooling": "webpack/tooling#feat-undefined-for-enum",
+    "tooling": "webpack/tooling#v1.23.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "url-loader": "^4.1.0",
